# django-query-utils

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
django_query_utils/filters/: full_text.py
django_query_utils/filters/websearch/: lexer.py  nodes.py  parser.py
django_query_utils/postgres/: locks.py
django_query_utils/postgres/filters/: __init__.py
django_query_utils/postgres/filters/websearch/: __init__.py  lexer.py  nodes.py
django_query_utils/query/: __init__.py  base.py  context.py  materializers.py
tests/: test_pg_fts_filters.py  test_pg_locks.py  test_query_helpers.py
tests/models/: __init__.py  fts_model.py
tests/settings/: django_test_settings.py
