[metadata]
name = django-query-utils
version = 0.0.4
url = https://github.com/surenkov/django-query-utils

description = Handful utils to work with raw queries in Django
long_description = file: README.md
long_description_content_type = text/markdown

author = Savva Surenkov
author_email = savva@surenkov.space
license_files =
    LICENSE

keywords = django, sql, postgres, query
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
packages = django_query_utils
install_requires =
    django>=3.0

[options.extras_require]
postgres = psycopg2-binary>=2.7,<3
filters = django-query-utils[postgres]; django-filter>=2.0
dev =
    black
    mypy==0.961
    flake8==4.0.*
    pytest==7.0.*
    django-stubs[compatible-mypy]
    pytest-django>=4.5,<5
